# DayTrail

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  PRIVACY.md  README.md  RELEASE.md  SECURITY.md  app-review.md  package.json
.agents/plugins/: marketplace.json
.github/scripts/: update-download-badge.mjs
.github/workflows/: auto-tag.yml  macos-release.yml  update-download-badge.yml  windows-release.yml
apps/browser-extension/: manifest.json
apps/desktop/: index.html  package-lock.json  package.json  (+3 more)
apps/desktop/src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: active_window.rs  app_icons.rs  daytrail_notification.rs  error.rs  focus.rs  focus_audio.rs  lib.rs  llm.rs  main.rs  matching.rs  models.rs  native_messaging.rs  permissions.rs  platform.rs  project_detection.rs  recovery.rs  store.rs  store_materialization.rs  tray.rs
apps/desktop/src-tauri/src/commands/: agents.rs  bridge.rs  calendar.rs  chat.rs  commitments.rs  context.rs  export.rs  focus.rs  inbox.rs  insights.rs  links.rs  mod.rs  offline.rs  outputs.rs  permissions.rs  planning.rs  privacy.rs  quick_note.rs  recovery.rs  report.rs  search.rs  settings.rs  task_activity.rs  tasks.rs  today.rs  tracking.rs  updates.rs  work_context.rs  work_memory.rs
apps/desktop/src-tauri/tests/: core_behavior.rs
docs/: design-guide.txt  functional-requirements.txt  index.html  technical-requirements.txt
scripts/: browser-extension-batching.test.mjs  browser-extension-privacy.test.mjs  build-macos-unsigned.sh  build-windows.ps1  bump-desktop-version.mjs  daytrail-terminal-bridge.ps1  daytrail-terminal-bridge.sh  install-browser-host.ps1  install-browser-host.sh  install-macos.sh  package-browser-extension.sh  package-macos-dmg.sh  package-macos-dmg.test.mjs  release-check.sh  release.sh  vscode-extension-helpers.test.mjs  worktrace-terminal-bridge.ps1  worktrace-terminal-bridge.sh  worktrace-terminal-bridge.test.mjs  write-native-host-manifest.mjs  write-native-host-manifest.test.mjs
(+75 files in other folders)
